<resources>
    <string name="app_name">EAP</string>
    <string name="action_settings">Settings</string>

    <!--base-->
    <string name="base_quit_toast_msg">再按一次退出程序！！</string>
    <string name="base_finish">完成</string>
    <string name="base_sure">确定</string>
    <string name="base_yes">是</string>
    <string name="base_no">否</string>
    <string name="base_official_net">官方网站</string>
    <string name="base_official_weibo">官方微博</string>
    <string name="base_current_version">当前版本:V#E</string>
    <string name="base_save">保存</string>

    <!--侧菜单-->
    <string name="stage_report">阶段报告</string>
    <string name="my_favorite">我的收藏</string>
    <string name="system_set">系统设定</string>
    <string name="help">用户帮助</string>
    <string name="measure">量一下(可多选)</string>
    <string name="bloor_pressure">血压参考值(30秒)</string>
    <string name="breath_rate">呼吸频率(30秒)</string>
    <string name="heart_pressure">心率(20秒)</string>
    <string name="emotion">情绪(2分钟)</string>
    <string name="tired">疲劳(30秒)</string>

    <!--首页-->
    <string name="home_blooth_pressure">动态血压</string>
    <string name="home_heart_rate">心率</string>
    <string name="home_breath_rate">呼吸频率</string>
    <string name="home_tired">疲劳</string>
    <string name="home_mood">心情</string>
    <string name="home_step">计步</string>
    <string name="home_re_value">参考值:</string>

    <!--系统设置-->
    <string name="set_personal">个人信息</string>
    <string name="set_check_version">检查更新</string>
    <string name="set_about">关于手环</string>
    <string name="set_close">关闭手环</string>
    <string name="set_unbind">设备解绑</string>
    <string name="set_close_confirm">您确定将关闭手环？</string>
    <string name="set_unbind_confirm">您确定将解绑手环？</string>
    <string name="set_updating">正在检查更新……</string>

    <!--版本更新-->
    <string name="update_version_app">软件版本</string>
    <string name="update_version_solid">手环版本</string>
    <string name="update_smart_serialize">手环序列号</string>
    <string name="update_smart_mac">手环地址</string>
    <string name="update_getting">获取中……</string>

    <!--个人信息-->
    <string name="userinfo_sex">选择性别</string>
    <string name="userinfo_sex_man">男</string>
    <string name="userinfo_sex_woman">女</string>
    <string name="userinfo_birthday">出生日期(年/月)</string>
    <string name="userinfo_weight">体重(kg)</string>
    <string name="userinfo_height">身高(cm)</string>
    <string name="userinfo_hands">选择佩戴手</string>
    <string name="userinfo_hands_left">左</string>
    <string name="userinfo_hands_right">右</string>
    <string name="userinfo_bind_mobile">绑定手机号码</string>
    <string name="userinfo_select_birthday">请选择出生日期</string>

    <!--用户帮助-->
    <string name="help_newer">新手上路</string>
    <string name="help_learn">了解</string>
    <string name="help_solve_problem">故障排除</string>
    <string name="help_solve_connect_failure">手机绑定时无法搜索到充电器并进入充电状态,
        指示灯显示为绿色闪烁,然后将手机蓝牙开启并靠近手环再进行尝试搜索和连接.\n
        请确认您的手机系统版本是Android4.0以上</string>
    <string name="help_solve_how_charged">1、从手上取下手环，在手环的背部会看到有一椭圆形的凹槽，槽上两端有"N""S"字样；\n
2、将充电线吸附头放置在此凹槽中，另一端连接5V输出的适配器（一般手机充电器）；\n
3、开启电源，手环就正常充电了；\n</string>
    <string name="help_solve_how_update">进入版本检测进行固件更新</string>
    <string name="help_solve_no_data">本手环有定时测量和主动测量机制,若未到定时测量时间,
        则不会有测量数据弹出 ; 您也可以使用客户端设置界面里” 量一下 ” 主动测量. 如果长时间无数据显示,
        请查看主页右上角的手环电量显示,没有电时请及时充电后在使用.</string>
    <string name="help_solve_ble_disconnect"> 请先确认您的手机已经开启蓝牙,并确保手环有电,并将手机靠近手环.手环会自动与手机连接.
如果手环已经解绑 , 请重新绑定手机.</string>

    <!--阶段报告-->
    <string name="report_heart_rate">心率</string>
    <string name="report_blooth_pressure">血压</string>
    <string name="report_blooth_step">计步</string>

    <!--dialog-->
    <string name="dialog_bind_mobile">修改绑定手机号?</string>
    <string name="dialog_input_mobile">请输入您的手机号</string>
    <string name="dialog_input_code">请输入验证码</string>
    <string name="dialog_send_code">发送验证码</string>
    <string name="dialog_install_now">立即更新</string>

    <!--我的血压-->
    <string name="user_my_bloothpressure">我的血压参考值</string>
    <string name="user_my_breath">我的呼吸</string>
    <string name="user_my_heart_rate">我的心率</string>
    <string name="user_my_step">我的运动计步</string>
    <string name="user_my_tired">我的及时测量结果</string>
    <string name="user_my_emotion">我的情绪</string>
    <string name="user_my_bloothpressure_result">您的血压偏低</string>
    <string name="user_my_bloothpressure_result_analyse">病情轻微症状可有：头晕、头痛、食欲不振、疲劳、脸色苍白等；
        严重症状包括：直立性眩晕、四肢冷、心悸、呼吸困难、需长期卧床。</string>
    <string name="user_my_bloothpressure_health_title">健康小贴士</string>
    <string name="user_my_bloothpressure_health_detail"> 注意: 饮食 低盐、低脂、低胆固醇、低热量的饮食，以植物油为主，
        减少含饱和脂肪酸的肥肉或肉类制品,多进食高维生素的食物，如蔬菜、水果、新鲜乳类。</string>
    <string name="user_my_bloothpressure_tips">\t\t本产品通过检测动态血压趋势的方式统计生物节律 , 以帮助人们更健康的生活 , 不能作为任何诊断相关的依据 .
        注 : 动态血压与医学诊断使用的诊室血压并非同一个概念 。</string>


    <!--疲劳提示语-->
    <string name="tired_normal">您的身心正常，状态很好！</string>
    <string name="tired_light_tired">轻度疲劳</string>
    <string name="tired_light_tired_info">提示： 您的身心已经开始有疲惫的倾向了！ 精神比较饱满、有点疲惫感、注意力开始不集中啦。</string>
    <string name="tired_middle_tired">中度疲劳</string>
    <string name="tired_middle_tired_info">提示： 您的身心有些疲劳，如果能停下来，就休息一下吧。精神不饱满、或有有疲乏、腿疼的感觉，注意力和效率低下。</string>
    <string name="tired_high_tired">重度疲劳</string>
    <string name="tired_high_tired_info">提示：您的身心已感觉到很疲劳，请停下来休息，否则会影响您的身心健康。</string>
    <string name="tired_xHigh_tired">极重度疲劳</string>
    <string name="tired_xHigh_tired_info">提示：您感觉眼睛酸痛、发胀、干涩、视力模糊。 需要马上停下来休息！</string>

    <!--情绪提示语-->
    <string name="mood_normal">平和 :  心率正常</string>
    <string name="mood_happy">激动 :  心率偏高</string>
    <string name="mood_depressed">消沉 :  心率偏低</string>

    <!-- 血压提示语-->
    <string name="blooth_pressure_normal">您的血压正常</string>
    <string name="blooth_pressure_tips">请继续保持健康的生活方式。</string>
    <string name="blooth_pressure_high">您的血压偏高</string>
    <string name="blooth_pressure_high_tips">表现为头晕、头痛、心悸等，随着受损器官出现的并发症而有明显的症状。</string>
    <string name="blooth_pressure_low">血压偏低</string>
    <string name="blooth_pressure_low_tips">您的血压偏低
	病情轻微症状可有：头晕、头痛、食欲不振、疲劳、脸色苍白等；严重症状包括：直立性眩晕、四肢冷、心悸、呼吸困难、需长期卧床。
Tip:     注意: 饮食 低盐、低脂、低胆固醇、低热量的饮食，以植物油为主，减少含饱和脂肪酸的肥肉或肉类制品,多进食高维生素的食物，如蔬菜、水果、新鲜乳类。</string>

    <!--心率提示语-->
    <string name="heart_rate_normal">您的心率正常</string>
    <string name="heart_rate_normal_tips">请继续保持健康的生活方式</string>
    <string name="heart_rate_low">您的心跳较慢</string>
    <string name="heart_rate_low_tips">常见于长期从事重体力劳动和运动员；病理性的见于甲状腺机能低下、颅内压增高、阻塞性黄疸、心得安类药物过量或中毒。</string>
    <string name="heart_rate_quick">您的心跳较快</string>
    <string name="heart_rate_quick_tips">常见于正常人运动、兴奋、吸烟、饮酒和喝浓茶后。也可见于发热、休克、贫血、甲亢、心力衰竭及应用阿托品、肾上腺素、麻黄素等。</string>
    <string name="heart_rate_tips">静息心率保持在60次左右为佳,应常常参加各种强度适宜的有氧运动，使心功能得到锻炼; 保持适当体重,肥胖会使心脏负担加重，心率加快，因此肥胖者要通过健身运动，调节饮食来保持适宜的体重。同时还要注意戒烟与限酒。</string>
    <string name="heart_rate_warnings"> 本产品通过检测动态心率趋势的方式统计生物节律 , 以帮助人们更健康的生活 , 不能作为任何诊断相关的依据 .  注 : 动态心率与医学诊断使用的诊室心率并非同一个概念。</string>

    <!--我的呼吸-->
    <string name="my_breath_test_state">测试状态</string>
    <string name="mybreath_test_stop">静止</string>
    <string name="mybreath_result_good">理想</string>

    <!--我的测量结果-->
    <string name="measure_result_hint">输入文字记录当下状态</string>
    <string name="measure_result_tired_grade">疲劳程度：</string>
    <string name="measure_result_tired_middle">中度疲劳</string>
    <string name="measure_result_tips">您的身心有些疲惫，如果能停下来，就休息一下吧</string>
    <string name="measure_result_analyse">精神不饱满，或有有疲乏、腿痛、心悸的感觉，注意力和效率低下</string>

    <!--我的运动计步-->
    <string name="step_total_walking">总步行数</string>
    <string name="step_walking_unit">步</string>
    <string name="step_walking_kilometers">步行公里数</string>
    <string name="step_kilometers">千米</string>
    <string name="step_energy">消耗卡里路</string>
    <string name="step_energy_unit">千卡</string>
    <string name="step_energy_info">相当于#个苹果的热量</string>

    <string name="cb_chart_nodata">亲,没有数据哦</string>


    <!-- 分享 -->
    <string name="share_title">SmartBracelet</string>
    <string name="share_content">生活本应如此！精致、精彩、精心的生活就在这里。</string>
    <string name="share_sina_not_installed">系统检测到未安装新浪微博客户端</string>
    <string name="share_sina_success">分享到新浪微博成功</string>
    <string name="share_sina_cancel">取消分享到新浪微博</string>
    <string name="share_sina_failure">分享失败</string>
    <string name="share_success">分享成功</string>
    <string name="share_wechatmoments">朋友圈</string>
    <string name="share_wechat">微信好友</string>
    <string name="qzone">qq空间</string>
    <string name="qq">qq</string>
    <string name="share_sinaweibo">新浪微博</string>
    <string name="share_cancel_share">取消分享</string>
    <string name="default_share_img">http://cms.clife.cn/logo.png</string>


    <!--BLE-->
    <string name="ble_not_support">您的手机暂不支持蓝牙</string>
    <string name="ble_not_support_4_0">您的手机不支持蓝牙4.0</string>


    <!--绑定-->
    <string name="binding">正在绑定……</string>

    <!--切换联网模式-->
    <string name="connect_mode_no">切换至单机模式</string>
    <string name="connect_mode_network">切换至联网模式</string>













    <string name="about_smart_bracelet">1.隐私条款\n\t\t手环重视您的个人隐私和您存储在我们的服务器中的内容
    ,本隐私条款解释及其关联公司会收集关于您的哪些信息及其原因,以及我们会如何使用这些信息以及如何处理您的内容。\n
    \n\n2.产品申明\n\t\t
    未经本公司书面许可，不得以任何方式或理由对上述产品、服务、信息、材料的任何部分进行使用、复制、修改、传播或
    与其他产品使用与销售</string>

</resources>
