<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <include layout="@layout/common_topbar" />

    <com.het.comres.view.layout.ItemLinearLayout
        android:id="@+id/set_personal"
        android:layout_width="match_parent"
        android:layout_height="@dimen/common_btn_height"
        app:item_isShowRight="true"
        app:item_showLeftImage="false"
        app:item_funcName="@string/set_personal"
        app:item_showDiliver="true" />

    <com.het.comres.view.layout.ItemLinearLayout
        android:id="@+id/set_check_version"
        android:layout_width="match_parent"
        android:layout_height="@dimen/common_btn_height"
        app:item_isShowRight="true"
        app:item_showLeftImage="false"
        app:item_funcName="@string/set_check_version"
        app:item_showDiliver="true" />

    <com.het.comres.view.layout.ItemLinearLayout
        android:id="@+id/set_about"
        android:layout_width="match_parent"
        android:layout_height="@dimen/common_btn_height"
        app:item_isShowRight="true"
        app:item_showLeftImage="false"
        app:item_funcName="@string/set_about"
        app:item_showDiliver="true" />

    <com.het.comres.view.layout.ItemLinearLayout
        android:id="@+id/set_close"
        android:layout_width="match_parent"
        android:layout_height="@dimen/common_btn_height"
        app:item_isShowRight="true"
        app:item_showLeftImage="false"
        app:item_funcName="@string/set_close"
        app:item_showDiliver="true" />

    <com.het.comres.view.layout.ItemLinearLayout
        android:id="@+id/set_unbind"
        android:layout_width="match_parent"
        android:layout_height="@dimen/common_btn_height"
        app:item_isShowRight="true"
        app:item_showLeftImage="false"
        app:item_funcName="@string/set_unbind"
        app:item_showDiliver="true" />


</LinearLayout>