<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="bottom"
    android:background="@color/common_white"
    android:orientation="vertical"
    android:paddingTop="@dimen/comm_padding">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/comm_padding"
        android:layout_marginRight="@dimen/comm_padding"
        android:orientation="horizontal">

        <!-- 朋友圈 -->

        <com.het.comres.view.CommImageTextView
            android:id="@+id/wechatmoments"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            app:comm_itemName="@string/share_wechatmoments"
            app:comm_topImageSrc="@mipmap/logo_wechatmoments" />

        <!-- 微信好友 -->

        <com.het.comres.view.CommImageTextView
            android:id="@+id/wechat"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_weight="1.0"
            app:comm_itemName="@string/share_wechat"
            app:comm_topImageSrc="@mipmap/logo_wechat" />

        <!-- qq空间 -->

        <com.het.comres.view.CommImageTextView
            android:id="@+id/qqzone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_weight="1.0"
            app:comm_itemName="@string/qzone"
            app:comm_topImageSrc="@mipmap/logo_qzone" />

        <!-- qq -->

        <com.het.comres.view.CommImageTextView
            android:id="@+id/qq"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/comm_padding"
            android:layout_weight="1.0"
            app:comm_itemName="@string/qq"
            app:comm_topImageSrc="@mipmap/logo_qq" />
    </LinearLayout>

    <!-- 新浪微博 -->

    <com.het.comres.view.CommImageTextView
        android:id="@+id/sinaweibo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="25dp"
        android:visibility="gone"
        app:comm_itemName="@string/share_sinaweibo"
        app:comm_topImageSrc="@mipmap/logo_sinaweibo" />

    <View
        style="@style/Style.Divider.Horizontal.Default"
        android:layout_marginTop="73dp" />

    <Button
        android:id="@+id/cancel_share"
        android:layout_width="match_parent"
        android:layout_height="@dimen/common_btn_height"
        android:background="@drawable/bg_color_selector"
        android:text="@string/share_cancel_share"
        style="@style/Style.Text.Tag" />

</LinearLayout>