<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/item_hands"
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:paddingLeft="@dimen/dimens15"
    android:paddingRight="@dimen/dimens15"
    android:layout_centerVertical="true">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:text="@string/userinfo_hands"
        android:layout_centerVertical="true"
        style="@style/Style.Text.Tag" />

    <TextView
        android:id="@+id/item_hands_left"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:text="@string/userinfo_hands_left"
        android:gravity="center_vertical"
        android:layout_centerVertical="true"
        android:layout_toLeftOf="@+id/item_hands_right"
        android:drawablePadding="10dp"
        android:drawableLeft="@mipmap/icon_left_hand_checked" />

    <TextView
        android:id="@+id/item_hands_right"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_centerVertical="true"
        android:layout_alignParentRight="true"
        android:layout_marginLeft="@dimen/dimens10"
        android:text="@string/userinfo_hands_right"
        android:gravity="center_vertical"
        android:drawableLeft="@mipmap/icon_right_hand_def"
        android:drawablePadding="10dp" />

</RelativeLayout>