<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/item_sex"
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:paddingLeft="@dimen/dimens15"
    android:paddingRight="@dimen/dimens15"
    android:layout_centerVertical="true">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:text="@string/userinfo_sex"
        android:layout_centerVertical="true"
        style="@style/Style.Text.Tag" />

    <TextView
        android:id="@+id/item_sex_man"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:text="@string/userinfo_sex_man"
        android:layout_centerVertical="true"
        android:gravity="center_vertical"
        android:drawablePadding="@dimen/dimens5"
        android:layout_toLeftOf="@+id/item_sex_woman"
        android:drawableLeft="@drawable/check_box_sex_man_style" />

    <TextView
        android:id="@+id/item_sex_woman"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginLeft="@dimen/dimens10"
        android:drawablePadding="@dimen/dimens5"
        android:layout_centerVertical="true"
        android:layout_alignParentRight="true"
        android:gravity="center_vertical"
        android:text="@string/userinfo_sex_woman"
        android:drawableLeft="@drawable/check_box_sex_woman_style" />

</RelativeLayout>