<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:paddingLeft="@dimen/dimens10"
    android:paddingRight="@dimen/dimens10"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/total_walking"
        android:layout_width="@dimen/dimens50"
        android:layout_height="@dimen/dimens50"
        android:scaleType="centerInside"
        android:layout_centerVertical="true"
        android:src="@mipmap/icon_total_energy" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/total_walking"
        android:text="@string/step_energy"
        android:textSize="16sp"
        android:layout_centerVertical="true" />


    <TextView
        android:id="@+id/step_unit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/step_energy_unit"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true" />

    <TextView
        android:id="@+id/step_energy_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="323"
        android:textColor="#FF22AB63"
        android:textSize="20sp"
        android:layout_toLeftOf="@+id/step_unit"
        android:layout_centerVertical="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/total_walking"
        android:layout_marginTop="@dimen/dimens15"
        android:layout_marginBottom="@dimen/dimens20"
        android:text="@string/step_energy_info" />

</RelativeLayout>